# version-bumper

./: .gitignore  Makefile  README.md  makefile  pyproject.toml
.github/workflows/: coverage.yaml  pytest.yaml
tests/: conftest.py  helpers.py  test_command.py
tests/fixtures/simple_project/: pyproject.toml
tests/fixtures/simple_project/simpleproj/: _version.py
version_bumper/: _version.py  bash.py  command.py  plugin.py  setversion.py  test.py
