[tool.poetry]
name = "version_bumper"
version = "0.1.1a0"
description = ""
authors = ["Kuba Gasiorowski <kgasiorowski123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry = "^1.8.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."poetry.application.plugin"]
bumpversion = "version_bumper.plugin:VersionBumperApplicationPlugin"